<?xml version="1.0" encoding="utf-8"?>
<!--
# By downloading, copying, installing or using the software you agree to this license.
# If you do not agree to this license, do not download, install,
# copy or use the software.
#
#
#                           License Agreement
#                For Open Source Computer Vision Library
#                        (3-clause BSD License)
#
# Copyright (C) 2015-2017, saki t_saki@serenegiant.com
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
#   * Redistributions of source code must retain the above copyright notice,
#     this list of conditions and the following disclaimer.
#
#   * Redistributions in binary form must reproduce the above copyright notice,
#     this list of conditions and the following disclaimer in the documentation
#     and/or other materials provided with the distribution.
#
#   * Neither the names of the copyright holders nor the names of the contributors
#     may be used to endorse or promote products derived from this software
#     without specific prior written permission.
#
# This software is provided by the copyright holders and contributors "as is" and
# any express or implied warranties, including, but not limited to, the implied
# warranties of merchantability and fitness for a particular purpose are disclaimed.
# In no event shall copyright holders or contributors be liable for any direct,
# indirect, incidental, special, exemplary, or consequential damages
# (including, but not limited to, procurement of substitute goods or services;
# loss of use, data, or profits; or business interruption) however caused
# and on any theory of liability, whether in contract, strict liability,
# or tort (including negligence or otherwise) arising in any way out of
# the use of this software, even if advised of the possibility of such damage.
-->
<resources>
	<string name="app_name">Autoparrot</string>

	<!-- ライントレース画面の文字列 -->
	<!-- カメラ設定 -->
	<string name="trace_config_title_camera">Camera settings</string>
	<string name="trace_camera_white_blance">White blance</string>
	<string name="trace_white_blance_auto">Auto</string>
	<string name="trace_white_blance_lamp">Lamp</string>
	<string name="trace_white_blance_daylight">Daylight</string>
	<string name="trace_white_blance_cloudy">Cloudy</string>
	<string name="trace_white_blance_flash">Flash</string>
	<string name="trace_white_blance_manual">Manual</string>
	<string name="trace_camera_exposure">Exposure: %6.3f</string>
	<string name="trace_camera_saturation">Saturation: %4.1f</string>
	<string name="trace_camera_pan">Pan: %4d</string>
	<string name="trace_camera_tilt">Tilt: %4d</string>
	<!-- 映像処理1 -->
	<string name="trace_config_title_preprocess">Preprocess settings1</string>
	<string name="trace_use_exposure">Exposure: %6.3f</string>
	<string name="trace_use_saturation">Saturation: %5.2f</string>
	<string name="trace_use_brightness">Brightness: %5.2f</string>
	<string name="trace_use_posterize">Posterize: %5.2f</string>
	<string name="trace_binarize_threshold">Binarize threshold: %5.2f</string>
	<string name="trace_trapezium_rate">Trapezium correction: %6.3f</string>
	<!-- 映像処理2 -->
	<string name="trace_config_title_preprocess2">Preprocess settings2</string>
	<string name="trace_fill_contour">Fill contour(OpenCV)</string>
	<string name="trace_smooth">Smooth</string>
	<string name="trace_smooth_opencv">Smooth(OpenCV)</string>
	<string name="trace_smooth_non">Non</string>
	<string name="trace_smooth_gaussian">Gaussian</string>
	<string name="trace_smooth_median">Median</string>
	<string name="trace_smooth_blur">Blur</string>
	<string name="trace_smooth_dilation">Dilation</string>
	<string name="trace_use_native_canny">Edge detection(Canny) on OpenCV</string>
	<string name="trace_use_canny">Edge detection(Canny) on OpenGL|ES</string>
	<string name="trace_max_thinning_loop">Thinning(OpenCV): %3d</string>
	<!-- 色抽出設定-->
	<string name="trace_config_title_color_extract">Color extraction settings</string>
	<string name="trace_config_extract_use_opencv">Color extraction on OpenCV</string>
	<string name="trace_config_extract_use">Color extraction on OpenGL|ES</string>
	<string name="trace_config_extract_color_update">Update color</string>
	<string name="trace_config_extract_color_select">Select color</string>
	<string name="trace_config_extract_color_reset">Reset color</string>
	<string name="trace_config_extract_range_h">Color range(Hue): %5.2f</string>
	<string name="trace_config_extract_range_s">Color range(Saturation): %5.2f</string>
	<string name="trace_config_extract_range_v">Color range(Value): %5.2f</string>
	<!-- 検出設定 -->
	<string name="trace_config_title_detect">Detect settings</string>
	<string name="trace_config_detect_area_limit_min">Min area when detect contour: %5.0f</string>
	<string name="trace_config_detect_area_err_limit1">Max area err1 on detect contour: %5.2f</string>
	<string name="trace_config_detect_area_err_limit2">Max area err2 on detect contour: %5.2f</string>
	<string name="trace_config_detect_aspect_limit_min">Min aspect when detect line: %5.1f</string>
	<!-- 飛行制御設定 -->
	<string name="trace_config_title_auto_trace">Auto trace settings</string>
	<string name="trace_config_trace_curvature">Curvature correction</string>
	<string name="trace_config_trace_reverse_bias">Directional reverse bias rate: %5.2f</string>
	<string name="trace_config_moving_ave_tap">Moving average tap: %d</string>
	<string name="trace_config_decay_rate">Decay rate: %6.3f</string>
	<string name="trace_config_trace_sensitivity">Trace sensitivity: %4.0f</string>
	<!-- 飛行制御設定2 -->
	<string name="trace_config_title_auto_trace2">Auto trace settings2</string>
	<string name="trace_config_trace_attitude_yaw">Attitude(yaw): %4.0f</string>
	<string name="trace_config_trace_speed">Flight speed: %4.0f</string>
	<string name="trace_config_trace_altitude_enable">Control altitude</string>
	<string name="trace_config_trace_altitude">Flight altitude: %5.1f</string>
	<!-- 平滑化 -->
	<array name="trace_smooth_entries">
		<item>@string/trace_smooth_non</item>
		<item>@string/trace_smooth_gaussian</item>
		<item>@string/trace_smooth_median</item>
		<item>@string/trace_smooth_blur</item>
		<item>@string/trace_smooth_dilation</item>
	</array>
	<array name="trace_smooth_value2">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
	</array>

	<!-- カメラホワイトバランス -->
	<array name="trace_white_blance_entries">
		<item>@string/trace_white_blance_manual</item>
		<item>@string/trace_white_blance_auto</item>
		<item>@string/trace_white_blance_lamp</item>
		<item>@string/trace_white_blance_daylight</item>
		<item>@string/trace_white_blance_cloudy</item>
		<item>@string/trace_white_blance_flash</item>
	</array>
	<array name="trace_white_blance_value">
		<item>-1</item>
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
	</array>
</resources>
