<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<!-- ライン検出時の最小面積 -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_config_detect_area_limit_min"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:id="@+id/area_limit_min_textview"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/area_limit_min_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- ライン検出時の最大面積誤差1 -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_config_detect_area_err_limit1"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:id="@+id/area_err_limit1_textview"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/area_err_limit1_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- ライン検出時の最大面積誤差1 -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_config_detect_area_err_limit2"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:id="@+id/area_err_limit2_textview"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/area_err_limit2_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- ライン検出時の最小アスペクト比 -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_config_detect_aspect_limit_min"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:id="@+id/aspect_limit_min_textview"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/aspect_limit_min_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
	</LinearLayout>
</ScrollView>
