<?xml version="1.0" encoding="utf-8"?>
<!--
# By downloading, copying, installing or using the software you agree to this license.
# If you do not agree to this license, do not download, install,
# copy or use the software.
#
#
#                           License Agreement
#                For Open Source Computer Vision Library
#                        (3-clause BSD License)
#
# Copyright (C) 2015-2017, saki t_saki@serenegiant.com
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
#   * Redistributions of source code must retain the above copyright notice,
#     this list of conditions and the following disclaimer.
#
#   * Redistributions in binary form must reproduce the above copyright notice,
#     this list of conditions and the following disclaimer in the documentation
#     and/or other materials provided with the distribution.
#
#   * Neither the names of the copyright holders nor the names of the contributors
#     may be used to endorse or promote products derived from this software
#     without specific prior written permission.
#
# This software is provided by the copyright holders and contributors "as is" and
# any express or implied warranties, including, but not limited to, the implied
# warranties of merchantability and fitness for a particular purpose are disclaimed.
# In no event shall copyright holders or contributors be liable for any direct,
# indirect, incidental, special, exemplary, or consequential damages
# (including, but not limited to, procurement of substitute goods or services;
# loss of use, data, or profits; or business interruption) however caused
# and on any theory of liability, whether in contract, strict liability,
# or tort (including negligence or otherwise) arising in any way out of
# the use of this software, even if advised of the possibility of such damage.
-->
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<!-- ホワイトバランス -->
<!--	<Switch
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_camera_white_blance"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textOn="@string/trace_white_blance_auto"
			android:textOff="@string/trace_white_blance_manual"
			android:paddingBottom="@dimen/min_padding"
			android:id="@+id/white_balance_sw"/> -->
		<!-- 露出 -->
		<TextView
			android:id="@+id/exposure_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_use_exposure"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/exposure_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- 彩度 -->
		<TextView
			android:id="@+id/saturation_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_use_saturation"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/saturation_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- 明るさ -->
		<TextView
			android:id="@+id/brightness_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_use_brightness"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/brightness_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- ポスタライズ  -->
<!--	<Switch
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:text="@string/trace_use_posterize"
			android:visibility="gone"
			android:paddingBottom="@dimen/min_padding"
			android:id="@+id/use_posterize_sw"/>
		<TextView
			android:id="@+id/posterize_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_use_brightness"
			android:paddingBottom="@dimen/min_padding"
			android:visibility="gone" />
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:id="@+id/posterize_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/> -->
		<!-- 二値化閾値  -->
		<TextView
			android:id="@+id/binarize_threshold_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_binarize_threshold"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/binarize_threshold_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- 台形補正係数  -->
		<TextView
			android:id="@+id/trapezium_rate_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_trapezium_rate"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/trapezium_rate_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
	</LinearLayout>
</ScrollView>
