<?xml version="1.0" encoding="utf-8"?>
<!--
# By downloading, copying, installing or using the software you agree to this license.
# If you do not agree to this license, do not download, install,
# copy or use the software.
#
#
#                           License Agreement
#                        (3-clause BSD License)
#
# Copyright (C) 2015-2017, saki t_saki@serenegiant.com
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
#   * Redistributions of source code must retain the above copyright notice,
#     this list of conditions and the following disclaimer.
#
#   * Redistributions in binary form must reproduce the above copyright notice,
#     this list of conditions and the following disclaimer in the documentation
#     and/or other materials provided with the distribution.
#
#   * Neither the names of the copyright holders nor the names of the contributors
#     may be used to endorse or promote products derived from this software
#     without specific prior written permission.
#
# This software is provided by the copyright holders and contributors "as is" and
# any express or implied warranties, including, but not limited to, the implied
# warranties of merchantability and fitness for a particular purpose are disclaimed.
# In no event shall copyright holders or contributors be liable for any direct,
# indirect, incidental, special, exemplary, or consequential damages
# (including, but not limited to, procurement of substitute goods or services;
# loss of use, data, or profits; or business interruption) however caused
# and on any theory of liability, whether in contract, strict liability,
# or tort (including negligence or otherwise) arising in any way out of
# the use of this software, even if advised of the possibility of such damage.
-->
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<!-- 輪郭内塗りつぶし -->
		<Switch
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/min_padding"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_fill_contour"
			android:id="@+id/use_fill_contour_sw"/>
		<!-- 平滑化(OpenGL|ES) -->
<!--	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_smooth"/>
		<Spinner
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/min_padding"
			android:id="@+id/use_smooth_spinner"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:layout_gravity="center_horizontal"/> -->
		<!-- エッジ検出(OpenGL|ES,Canny) -->
<!--	<Switch
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/min_padding"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_use_canny"
			android:id="@+id/use_canny_sw"/> -->
		<!-- 平滑化(OpenCV) -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_smooth_opencv"/>
		<Spinner
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/use_native_smooth_spinner"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:paddingBottom="@dimen/min_padding"
			android:layout_gravity="center_horizontal"/>
		<!-- 細線化(OpenCV) -->
		<TextView
			android:id="@+id/max_thinning_loop_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_max_thinning_loop"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/max_thinning_loop_seekbar"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- エッジ検出(OpenCV,Canny) -->
<!--	<Switch
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:text="@string/trace_use_native_canny"
			android:paddingBottom="@dimen/min_padding"
			android:id="@+id/use_native_canny_sw"/> -->
	</LinearLayout>
</ScrollView>
